--- a/src/main/webapp/includes/menuPrincipal.xhtml
+++ b/src/main/webapp/includes/menuPrincipal.xhtml
@@ -36,6 +36,7 @@
 
                 <p:menuitem value="Setor" outcome="/pages/Setor.xhtml" />
                 <p:menuitem value="Produto" outcome="/pages/Produto.xhtml" />
+                <p:menuitem value="Privilegio" outcome="/pages/Privilegio.xhtml" />
                 <p:menuitem value="Usuario" outcome="/pages/Usuario.xhtml" />
                 <p:menuitem value="País" outcome="/pages/Pais.xhtml" />
                 <p:menuitem value="Estado" outcome="/pages/Estado.xhtml" />
