--- a/src/main/webapp/includes/menuPrincipal.xhtml
+++ b/src/main/webapp/includes/menuPrincipal.xhtml
@@ -31,8 +31,8 @@
 
                 <p:menuitem value="Patrimonio " outcome="/pages/patrimonio.xhtml" />
 
-                <p:menuitem value="Produtos com defeito"
-                            outcome="/pages/CadProdutoDefeito.xhtml" />
+                <p:menuitem value="Manutenção"
+                            outcome="/pages/Manutencao.xhtml" />
 
                 <p:menuitem value="Setor" outcome="/pages/Setor.xhtml" />
                 <p:menuitem value="Produto" outcome="/pages/Produto.xhtml" />
