--- a/src/main/webapp/includes/menuPrincipal.xhtml
+++ b/src/main/webapp/includes/menuPrincipal.xhtml
@@ -53,7 +53,7 @@
                      
 
             <p:submenu label="Relatorio" icon="ui-icon-document">
-                <p:menuitem value="Usuarios" />
+                <p:menuitem value="Geral" outcome="/pages/Relatorio.xhtml" />
                 <p:menuitem value="Fornecedores" />
                 <p:menuitem value="Países" />
                 <p:menuitem value="Cidades" />
