Atualização da tela Requisicão Adicionar itens de Insumo

--- a/src/main/webapp/includes/menuPrincipal.xhtml
+++ b/src/main/webapp/includes/menuPrincipal.xhtml
@@ -57,7 +57,7 @@
                 <p:menuitem value="Lista de compras"/>
                 <p:menuitem value="Cotação"/>
                 <p:menuitem value="Resultado"/>
-                <p:menuitem value="Requisição"/>
+                <p:menuitem value="Requisição" outcome="/pages/Requisicao.xhtml"/>
 
             </p:submenu>
 
