Atualização da tela Requisicão Adicionar itens de Insumo

--- a/src/main/webapp/includes/Principal.xhtml
+++ b/src/main/webapp/includes/Principal.xhtml
@@ -23,10 +23,14 @@
     <ui:define name="baixo" >
 
         <div class="copyrights" >
-            <span> © Copyright 2017, RastroInfo System | Todos os direitos reservados</span>
-        </div>      
+            <span> © Copyright 2017, RastroInfo System | Todos os direitos reservados</span> <p:spacer height="2" />
+            <p:spacer width="5" /> <p:link styleClass="fa fa-facebook-square"/>  
+            <p:spacer width="5" /> <p:link styleClass="fa fa-instagram"/> <p:spacer height="20"/> <p:outputLabel value="As minhas ovelhas ouvem a minha voz; eu as conheço, e elas me seguem. 
+João 10:27"/>
+    </div>      
 
-    </ui:define>
+
+</ui:define>
 
 
 
