--- a/src/main/webapp/includes/menuPrincipal.xhtml
+++ b/src/main/webapp/includes/menuPrincipal.xhtml
@@ -54,18 +54,17 @@
                   <p:menuitem value="Marca" outcome="/pages/Marca.xhtml" />
                   <p:menuitem value="Grupo" outcome="/pages/Grupo.xhtml" />
                 <p:menuitem value="Insumos" outcome="/pages/Insumo.xhtml" />
-                <p:menuitem value="Lista de compras"/>
-                <p:menuitem value="Cotação"/>
-                <p:menuitem value="Resultado"/>
+                <p:menuitem value="Lista de compras" outcome="/pages/ListaDeCompras.xhtml"/>
+                <p:menuitem value="Cotação" outcome="/pages/Cotacao.xhtml"/>
+                <p:menuitem value="Pedido de Compra"/>
                 <p:menuitem value="Requisição" outcome="/pages/Requisicao.xhtml"/>
 
             </p:submenu>
 
             <p:submenu label="Frota" icon="fa fa-automobile">
-                <p:menuitem value="Veículos" />
-                <p:menuitem value="Requisição" />
-                <p:menuitem value="Abatecimento" />
-                <p:menuitem value="Reparo" />
+                <p:menuitem value="Veículos" outcome="/pages/Veiculo.xhtml" />
+                <p:menuitem value="Requisição" outcome="/pages/RequisicaoVeiculo.xhtml"/>
+                
             </p:submenu>
 
             <p:submenu label="Configurações" icon="ui-icon-wrench">
