--- a/src/main/webapp/includes/Principal.xhtml
+++ b/src/main/webapp/includes/Principal.xhtml
@@ -15,9 +15,6 @@
     <ui:define name="conteudo">
 
 
-
-
-
     </ui:define>
 
     <ui:define name="baixo" >
@@ -25,12 +22,12 @@
         <div class="copyrights" >
             <span> © Copyright 2017, RastroInfo System | Todos os direitos reservados</span> <p:spacer height="2" />
             <p:spacer width="5" /> <p:link styleClass="fa fa-facebook-square"/>  
-            <p:spacer width="5" /> <p:link styleClass="fa fa-instagram"/> <p:spacer height="20"/> <p:outputLabel value="As minhas ovelhas ouvem a minha voz; eu as conheço, e elas me seguem. 
-João 10:27"/>
-    </div>      
+            <p:spacer width="5" /> <p:link styleClass="fa fa-instagram"/> <p:spacer 
+                height="20"/> <p:outputLabel value=" As minhas ovelhas ouvem a minha voz; eu as conheço, e elas me seguem.João 10:27"/>
+        </div>      
 
 
-</ui:define>
+    </ui:define>
 
 
 
