--- a/src/main/webapp/includes/menuPrincipal.xhtml
+++ b/src/main/webapp/includes/menuPrincipal.xhtml
@@ -31,28 +31,21 @@
 
                 <p:menuitem value="Fornecedor" outcome="/pages/Fornecedor.xhtml" />
                 <p:menuitem value="Funcionario"/>
-
-                <p:menuitem value="Patrimonio " outcome="/pages/patrimonio.xhtml" />
-
-                <p:menuitem value="Manutenção"
-                            outcome="/pages/Manutencao.xhtml" />
-
                 <p:menuitem value="Setor" outcome="/pages/Setor.xhtml" />
-                <p:menuitem value="Produto" outcome="/pages/Produto.xhtml" />
                 <p:menuitem value="Privilegio" outcome="/pages/Privilegio.xhtml" />
                 <p:menuitem value="Usuario" outcome="/pages/Usuario.xhtml" />
                 <p:menuitem value="País" outcome="/pages/Pais.xhtml" />
                 <p:menuitem value="Estado" outcome="/pages/Estado.xhtml" />
                 <p:menuitem value="Cidade" outcome="/pages/Cidade.xhtml" />
-                <p:menuitem value="Rua" outcome="/pages/CadRua.xhtml" />
                 <p:menuitem value="Categoria" outcome="/pages/Categoria.xhtml"  />
-                <p:menuitem value="Chaves" outcome="/pages/Chave.xhtml" />
-                <p:menuitem value="Doc.fiscal/Outros" outcome="/pages/DocumentoFiscal.xhtml" />
+
+
             </p:submenu>
 
             <p:submenu label="Compras" icon="fa fa-shopping-cart">
-                  <p:menuitem value="Marca" outcome="/pages/Marca.xhtml" />
-                  <p:menuitem value="Grupo" outcome="/pages/Grupo.xhtml" />
+                <p:menuitem value="Marca" outcome="/pages/Marca.xhtml" />
+                <p:menuitem value="Grupo" outcome="/pages/Grupo.xhtml" />
+                <p:menuitem value="Unidade" outcome="/pages/Unidade.xhtml"/>
                 <p:menuitem value="Insumos" outcome="/pages/Insumo.xhtml" />
                 <p:menuitem value="Lista de compras" outcome="/pages/ListaDeCompras.xhtml"/>
                 <p:menuitem value="Cotação" outcome="/pages/Cotacao.xhtml"/>
@@ -64,7 +57,17 @@
             <p:submenu label="Frota" icon="fa fa-automobile">
                 <p:menuitem value="Veículos" outcome="/pages/Veiculo.xhtml" />
                 <p:menuitem value="Requisição" outcome="/pages/RequisicaoVeiculo.xhtml"/>
-                
+
+            </p:submenu>
+
+            <p:submenu label="Patrimônio" icon="fa fa-bank">
+
+                <p:menuitem value="Produto" outcome="/pages/Produto.xhtml" />
+                <p:menuitem value="Doc.fiscal/Outros" outcome="/pages/DocumentoFiscal.xhtml" />
+                <p:menuitem value="Patrimonio " outcome="/pages/patrimonio.xhtml" />
+                <p:menuitem value="Manutenção" outcome="/pages/Manutencao.xhtml" />
+                <p:menuitem value="Chaves" outcome="/pages/Chave.xhtml" />
+
             </p:submenu>
 
             <p:submenu label="Configurações" icon="ui-icon-wrench">
